// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DefineDetector /> spec creating detector definition renders the component 1`] = `
<div
  class="euiPage"
  style="margin-top: -24px;"
>
  <main
    class="euiPageBody"
  >
    <div
      class="euiPageHeader euiPageHeader--responsive"
    >
      <div
        class="euiPageHeaderSection"
      >
        <h1
          class="euiTitle euiTitle--large"
        >
          Define detector
           
        </h1>
      </div>
    </div>
    <div
      class="euiPanel euiPanel--paddingMedium"
      style="padding: 20px;"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
        style="padding: 0px;"
      >
        <div
          class="euiFlexItem"
        >
          <h3
            class="euiTitle euiTitle--small"
          >
            Detector details
          </h3>
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem content-panel-subTitle"
              style="line-height: normal; max-width: 75%;"
            />
          </div>
        </div>
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem"
            />
          </div>
        </div>
      </div>
      <div>
        <hr
          class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginSmall"
        />
        <div
          style="padding: 10px 0px;"
        >
          <div
            class="euiFormRow"
            hint="Specify a unique and descriptive name that is easy to recognize."
            id="random_html_id-row"
            title="Name"
          >
            <div
              class="euiFormRow__labelWrapper"
            >
              <label
                aria-invalid="false"
                class="euiFormLabel euiFormRow__label"
                for="random_html_id"
              >
                <div
                  style="line-height: 8px;"
                >
                  <p>
                    Name
                  </p>
                  <br />
                  <div
                    class="euiText euiText--medium sublabel"
                    style="max-width: 400px;"
                  >
                    Specify a unique and descriptive name that is easy to recognize.
                  </div>
                </div>
              </label>
            </div>
            <div
              class="euiFormRow__fieldWrapper"
            >
              <div
                class="euiFormControlLayout"
              >
                <div
                  class="euiFormControlLayout__childrenWrapper"
                >
                  <input
                    aria-describedby="random_html_id-help"
                    class="euiFieldText"
                    id="random_html_id"
                    name="name"
                    placeholder="Enter detector name"
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <div
                class="euiFormHelpText euiFormRow__text"
                id="random_html_id-help"
              >
                Detector name must contain 1-64 characters. Valid characters are
                a-z, A-Z, 0-9, -(hyphen), _(underscore) and .(period).
              </div>
            </div>
          </div>
          <div
            class="euiFormRow"
            hint="Describe the purpose of the detector."
            id="random_html_id-row"
          >
            <div
              class="euiFormRow__labelWrapper"
            >
              <label
                aria-invalid="false"
                class="euiFormLabel euiFormRow__label"
                for="random_html_id"
              >
                <div
                  style="line-height: 8px;"
                >
                  <p>
                    Description 
                    <span
                      class="optional"
                    >
                      - optional
                    </span>
                  </p>
                  <br />
                  <div
                    class="euiText euiText--medium sublabel"
                    style="max-width: 400px;"
                  >
                    Describe the purpose of the detector.
                  </div>
                </div>
              </label>
            </div>
            <div
              class="euiFormRow__fieldWrapper"
            >
              <textarea
                class="euiTextArea euiTextArea--resizeVertical"
                id="random_html_id"
                name="description"
                placeholder="Describe the detector"
                rows="3"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="euiSpacer euiSpacer--l"
    />
    <div
      class="euiPanel euiPanel--paddingMedium"
      style="padding: 20px;"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
        style="padding: 0px;"
      >
        <div
          class="euiFlexItem"
        >
          <h3
            class="euiTitle euiTitle--small"
          >
            Data Source
          </h3>
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem content-panel-subTitle"
              style="line-height: normal; max-width: 75%;"
            />
          </div>
        </div>
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem"
            />
          </div>
        </div>
      </div>
      <div>
        <hr
          class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginSmall"
        />
        <div
          style="padding: 10px 0px;"
        >
          <div
            class="euiFormRow"
            hint="Choose an index or index pattern as the data source."
            id="random_html_id-row"
            title="Index"
          >
            <div
              class="euiFormRow__labelWrapper"
            >
              <label
                aria-invalid="false"
                class="euiFormLabel euiFormRow__label"
                for="random_html_id"
              >
                <div
                  style="line-height: 8px;"
                >
                  <p>
                    Index
                  </p>
                  <br />
                  <div
                    class="euiText euiText--medium sublabel"
                    style="max-width: 400px;"
                  >
                    Choose an index or index pattern as the data source.
                  </div>
                </div>
              </label>
            </div>
            <div
              class="euiFormRow__fieldWrapper"
            >
              <div
                aria-describedby="random_html_id-help"
                aria-expanded="false"
                aria-haspopup="listbox"
                class="euiComboBox"
                role="combobox"
              >
                <div
                  class="euiFormControlLayout"
                >
                  <div
                    class="euiFormControlLayout__childrenWrapper"
                  >
                    <div
                      class="euiComboBox__inputWrap euiComboBox__inputWrap--noWrap euiComboBox__inputWrap-isLoading"
                      data-test-subj="comboBoxInput"
                      tabindex="-1"
                    >
                      <p
                        class="euiComboBoxPlaceholder"
                      >
                        Find indices
                      </p>
                      <div
                        class="euiComboBox__input"
                        style="font-size: 14px; display: inline-block;"
                      >
                        <input
                          aria-controls=""
                          data-test-subj="comboBoxSearchInput"
                          id="random_html_id"
                          role="textbox"
                          style="box-sizing: content-box; width: 2px;"
                          value=""
                        />
                        <div
                          style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                        />
                      </div>
                    </div>
                    <div
                      class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                    >
                      <span
                        class="euiLoadingSpinner euiLoadingSpinner--medium"
                      />
                      <button
                        aria-label="Open list of options"
                        class="euiFormControlLayoutCustomIcon euiFormControlLayoutCustomIcon--clickable"
                        data-test-subj="comboBoxToggleListButton"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                          focusable="false"
                          height="16"
                          role="img"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="euiFormHelpText euiFormRow__text"
                id="random_html_id-help"
              >
                You can use a wildcard (*) in your index pattern.
              </div>
            </div>
          </div>
          <div
            class="euiFormRow euiFormRow--fullWidth"
            hint="Choose a subset of your data source to focus your data stream and reduce noisy data."
            id="random_html_id-row"
          >
            <div
              class="euiFormRow__labelWrapper"
            >
              <label
                class="euiFormLabel euiFormRow__label"
                for="random_html_id"
              >
                <div
                  style="line-height: 8px;"
                >
                  <p>
                    Data filter
                    <span
                      class="optional"
                    >
                      - optional
                    </span>
                  </p>
                  <br />
                  <div
                    class="euiText euiText--medium sublabel"
                    style="max-width: 400px;"
                  >
                    Choose a subset of your data source to focus your data stream and reduce noisy data.
                  </div>
                </div>
              </label>
            </div>
            <div
              class="euiFormRow__fieldWrapper"
            >
              <div
                class="euiSpacer euiSpacer--m"
              />
              <div
                class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--directionRow euiFlexGroup--responsive"
              >
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <svg
                    aria-hidden="true"
                    class="euiIcon euiIcon--medium euiIcon-isLoading"
                    focusable="false"
                    height="16"
                    role="img"
                    style="margin-right: -4px; margin-top: 2px;"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  />
                </div>
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                  style="margin-top: 0px;"
                >
                  <button
                    class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall"
                    type="button"
                  >
                    <span
                      class="euiButtonContent euiButtonEmpty__content"
                    >
                      <span
                        class="euiButtonEmpty__text"
                      >
                        + Add data filter
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="euiSpacer euiSpacer--l"
    />
    <div
      class="euiPanel euiPanel--paddingMedium"
      style="padding: 20px;"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
        style="padding: 0px;"
      >
        <div
          class="euiFlexItem"
        >
          <h3
            class="euiTitle euiTitle--small"
          >
            Timestamp
          </h3>
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem content-panel-subTitle"
              style="line-height: normal; max-width: 75%;"
            >
              Select the time field you want to use for the time filter.
            </div>
          </div>
        </div>
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem"
            />
          </div>
        </div>
      </div>
      <div>
        <hr
          class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginSmall"
        />
        <div
          style="padding: 10px 0px;"
        >
          <div
            class="euiFormRow"
            hint="Choose the time field you want to use for time filter."
            id="random_html_id-row"
            title="Timestamp field"
          >
            <div
              class="euiFormRow__labelWrapper"
            >
              <label
                aria-invalid="false"
                class="euiFormLabel euiFormRow__label"
                for="random_html_id"
              >
                <div
                  style="line-height: 8px;"
                >
                  <p>
                    Timestamp field
                  </p>
                  <br />
                  <div
                    class="euiText euiText--medium sublabel"
                    style="max-width: 400px;"
                  >
                    Choose the time field you want to use for time filter.
                  </div>
                </div>
              </label>
            </div>
            <div
              class="euiFormRow__fieldWrapper"
            >
              <div
                aria-expanded="false"
                aria-haspopup="listbox"
                class="euiComboBox"
                role="combobox"
              >
                <div
                  class="euiFormControlLayout"
                >
                  <div
                    class="euiFormControlLayout__childrenWrapper"
                  >
                    <div
                      class="euiComboBox__inputWrap euiComboBox__inputWrap--noWrap"
                      data-test-subj="comboBoxInput"
                      tabindex="-1"
                    >
                      <p
                        class="euiComboBoxPlaceholder"
                      >
                        Find timestamp
                      </p>
                      <div
                        class="euiComboBox__input"
                        style="font-size: 14px; display: inline-block;"
                      >
                        <input
                          aria-controls=""
                          data-test-subj="comboBoxSearchInput"
                          id="random_html_id"
                          role="textbox"
                          style="box-sizing: content-box; width: 2px;"
                          value=""
                        />
                        <div
                          style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                        />
                      </div>
                    </div>
                    <div
                      class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                    >
                      <button
                        aria-label="Open list of options"
                        class="euiFormControlLayoutCustomIcon euiFormControlLayoutCustomIcon--clickable"
                        data-test-subj="comboBoxToggleListButton"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                          focusable="false"
                          height="16"
                          role="img"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="euiSpacer euiSpacer--l"
    />
    <div
      class="euiPanel euiPanel--paddingMedium"
      style="padding: 20px;"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
        style="padding: 0px;"
      >
        <div
          class="euiFlexItem"
        >
          <h3
            class="euiTitle euiTitle--small"
          >
            Operation settings
          </h3>
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem content-panel-subTitle"
              style="line-height: normal; max-width: 75%;"
            />
          </div>
        </div>
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem"
            />
          </div>
        </div>
      </div>
      <div>
        <hr
          class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginSmall"
        />
        <div
          style="padding: 10px 0px;"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem"
              style="max-width: 70%;"
            >
              <div
                class="euiFormRow euiFormRow--fullWidth"
                hint="Define how often the detector collects data to generate anomalies. The shorter the interval is, the more real time the  detector results will be, and the more computing resources the  detector will need."
                hintlink="https://opensearch.org/docs/monitoring-plugins/ad"
                id="random_html_id-row"
                title="Detector interval"
              >
                <div
                  class="euiFormRow__labelWrapper"
                >
                  <label
                    aria-invalid="false"
                    class="euiFormLabel euiFormRow__label"
                    for="random_html_id"
                  >
                    <div
                      style="line-height: 8px;"
                    >
                      <p>
                        Detector interval
                      </p>
                      <br />
                      <div
                        class="euiText euiText--medium sublabel"
                        style="max-width: 400px;"
                      >
                        Define how often the detector collects data to generate anomalies. The shorter the interval is, the more real time the  detector results will be, and the more computing resources the  detector will need.
                         
                        <a
                          class="euiLink euiLink--primary"
                          href="https://opensearch.org/docs/monitoring-plugins/ad"
                          rel="noopener noreferrer"
                          target="_blank"
                        >
                          Learn more 
                          <svg
                            aria-hidden="true"
                            class="euiIcon euiIcon--small euiIcon-isLoading"
                            focusable="false"
                            height="16"
                            role="img"
                            viewBox="0 0 16 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          />
                        </a>
                      </div>
                    </div>
                  </label>
                </div>
                <div
                  class="euiFormRow__fieldWrapper"
                >
                  <div
                    class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
                    id="random_html_id"
                  >
                    <div
                      class="euiFlexItem euiFlexItem--flexGrowZero"
                    >
                      <div
                        class="euiFormControlLayout"
                      >
                        <div
                          class="euiFormControlLayout__childrenWrapper"
                        >
                          <input
                            class="euiFieldNumber"
                            data-test-subj="detectionInterval"
                            id="detectionInterval"
                            min="1"
                            name="interval"
                            placeholder="Detector interval"
                            type="number"
                            value="10"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="euiFlexItem"
                    >
                      <div
                        class="euiText euiText--medium"
                      >
                        <p
                          class="minutes"
                        >
                          minutes
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="euiFormRow euiFormRow--fullWidth"
            hint="Specify a window of delay for a detector to fetch data, if you need to account for extra processing time."
            hintlink="https://opensearch.org/docs/monitoring-plugins/ad"
            id="random_html_id-row"
            style="margin-top: 16px;"
            title="Window delay"
          >
            <div
              class="euiFormRow__labelWrapper"
            >
              <label
                aria-invalid="false"
                class="euiFormLabel euiFormRow__label"
                for="random_html_id"
              >
                <div
                  style="line-height: 8px;"
                >
                  <p>
                    Window delay
                  </p>
                  <br />
                  <div
                    class="euiText euiText--medium sublabel"
                    style="max-width: 400px;"
                  >
                    Specify a window of delay for a detector to fetch data, if you need to account for extra processing time.
                     
                    <a
                      class="euiLink euiLink--primary"
                      href="https://opensearch.org/docs/monitoring-plugins/ad"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      Learn more 
                      <svg
                        aria-hidden="true"
                        class="euiIcon euiIcon--small euiIcon-isLoading"
                        focusable="false"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      />
                    </a>
                  </div>
                </div>
              </label>
            </div>
            <div
              class="euiFormRow__fieldWrapper"
            >
              <div
                class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
                id="random_html_id"
              >
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <div
                    class="euiFormControlLayout"
                  >
                    <div
                      class="euiFormControlLayout__childrenWrapper"
                    >
                      <input
                        class="euiFieldNumber"
                        data-test-subj="windowDelay"
                        id="windowDelay"
                        name="windowDelay"
                        placeholder="Window delay"
                        type="number"
                        value="1"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="euiFlexItem"
                >
                  <div
                    class="euiText euiText--medium"
                  >
                    <p
                      class="minutes"
                    >
                      minutes
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="euiSpacer euiSpacer--l"
    />
    <div
      class="euiPanel euiPanel--paddingMedium"
      style="padding: 20px;"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
        style="padding: 0px;"
      >
        <div
          class="euiFlexItem"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem"
            >
              <h2
                class="euiTitle euiTitle--small"
                id="resultIndexField"
              >
                Custom result index
              </h2>
            </div>
          </div>
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem content-panel-subTitle"
              style="line-height: normal; max-width: 75%;"
            >
              <div
                class="euiText euiText--medium content-panel-subTitle"
                style="line-height: normal;"
              >
                Store detector results to your own index.
                 
                <a
                  class="euiLink euiLink--primary"
                  href="https://opensearch.org/docs/monitoring-plugins/ad"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Learn more 
                  <svg
                    aria-hidden="true"
                    class="euiIcon euiIcon--small euiIcon-isLoading"
                    focusable="false"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  />
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem"
            />
          </div>
        </div>
      </div>
      <div>
        <hr
          class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginSmall"
        />
        <div
          style="padding: 10px 0px;"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionColumn euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem"
            >
              <div
                class="euiCheckbox"
              >
                <input
                  class="euiCheckbox__input"
                  id="resultIndexCheckbox"
                  type="checkbox"
                />
                <div
                  class="euiCheckbox__square"
                />
                <label
                  class="euiCheckbox__label"
                  for="resultIndexCheckbox"
                >
                  Enable custom result index
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`<DefineDetector /> spec editing detector definition renders the component 1`] = `
<div
  class="euiPage"
  style="margin-top: -24px;"
>
  <main
    class="euiPageBody"
  >
    <div
      class="euiPageHeader euiPageHeader--responsive"
    >
      <div
        class="euiPageHeaderSection"
      >
        <h1
          class="euiTitle euiTitle--large"
        >
          Edit detector settings
           
        </h1>
      </div>
    </div>
    <div
      class="euiPanel euiPanel--paddingMedium"
      style="padding: 20px;"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
        style="padding: 0px;"
      >
        <div
          class="euiFlexItem"
        >
          <h3
            class="euiTitle euiTitle--small"
          >
            Detector details
          </h3>
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem content-panel-subTitle"
              style="line-height: normal; max-width: 75%;"
            />
          </div>
        </div>
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem"
            />
          </div>
        </div>
      </div>
      <div>
        <hr
          class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginSmall"
        />
        <div
          style="padding: 10px 0px;"
        >
          <div
            class="euiFormRow"
            hint="Specify a unique and descriptive name that is easy to recognize."
            id="random_html_id-row"
            title="Name"
          >
            <div
              class="euiFormRow__labelWrapper"
            >
              <label
                aria-invalid="false"
                class="euiFormLabel euiFormRow__label"
                for="random_html_id"
              >
                <div
                  style="line-height: 8px;"
                >
                  <p>
                    Name
                  </p>
                  <br />
                  <div
                    class="euiText euiText--medium sublabel"
                    style="max-width: 400px;"
                  >
                    Specify a unique and descriptive name that is easy to recognize.
                  </div>
                </div>
              </label>
            </div>
            <div
              class="euiFormRow__fieldWrapper"
            >
              <div
                class="euiFormControlLayout"
              >
                <div
                  class="euiFormControlLayout__childrenWrapper"
                >
                  <input
                    aria-describedby="random_html_id-help"
                    class="euiFieldText"
                    id="random_html_id"
                    name="name"
                    placeholder="Enter detector name"
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <div
                class="euiFormHelpText euiFormRow__text"
                id="random_html_id-help"
              >
                Detector name must contain 1-64 characters. Valid characters are
                a-z, A-Z, 0-9, -(hyphen), _(underscore) and .(period).
              </div>
            </div>
          </div>
          <div
            class="euiFormRow"
            hint="Describe the purpose of the detector."
            id="random_html_id-row"
          >
            <div
              class="euiFormRow__labelWrapper"
            >
              <label
                aria-invalid="false"
                class="euiFormLabel euiFormRow__label"
                for="random_html_id"
              >
                <div
                  style="line-height: 8px;"
                >
                  <p>
                    Description 
                    <span
                      class="optional"
                    >
                      - optional
                    </span>
                  </p>
                  <br />
                  <div
                    class="euiText euiText--medium sublabel"
                    style="max-width: 400px;"
                  >
                    Describe the purpose of the detector.
                  </div>
                </div>
              </label>
            </div>
            <div
              class="euiFormRow__fieldWrapper"
            >
              <textarea
                class="euiTextArea euiTextArea--resizeVertical"
                id="random_html_id"
                name="description"
                placeholder="Describe the detector"
                rows="3"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="euiSpacer euiSpacer--l"
    />
    <div
      class="euiPanel euiPanel--paddingMedium"
      style="padding: 20px;"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
        style="padding: 0px;"
      >
        <div
          class="euiFlexItem"
        >
          <h3
            class="euiTitle euiTitle--small"
          >
            Data Source
          </h3>
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem content-panel-subTitle"
              style="line-height: normal; max-width: 75%;"
            />
          </div>
        </div>
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem"
            />
          </div>
        </div>
      </div>
      <div>
        <hr
          class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginSmall"
        />
        <div
          style="padding: 10px 0px;"
        >
          <div>
            <div
              class="euiCallOut euiCallOut--warning euiCallOut--small"
            >
              <div
                class="euiCallOutHeader"
              >
                <svg
                  aria-hidden="true"
                  class="euiIcon euiIcon--medium euiIcon-isLoading euiCallOutHeader__icon"
                  focusable="false"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                />
                <span
                  class="euiCallOutHeader__title"
                >
                  Modifying the selected index resets your detector configuration.
                </span>
              </div>
            </div>
            <div
              class="euiSpacer euiSpacer--l"
            />
          </div>
          <div
            class="euiFormRow"
            hint="Choose an index or index pattern as the data source."
            id="random_html_id-row"
            title="Index"
          >
            <div
              class="euiFormRow__labelWrapper"
            >
              <label
                aria-invalid="false"
                class="euiFormLabel euiFormRow__label"
                for="random_html_id"
              >
                <div
                  style="line-height: 8px;"
                >
                  <p>
                    Index
                  </p>
                  <br />
                  <div
                    class="euiText euiText--medium sublabel"
                    style="max-width: 400px;"
                  >
                    Choose an index or index pattern as the data source.
                  </div>
                </div>
              </label>
            </div>
            <div
              class="euiFormRow__fieldWrapper"
            >
              <div
                aria-describedby="random_html_id-help"
                aria-expanded="false"
                aria-haspopup="listbox"
                class="euiComboBox"
                role="combobox"
              >
                <div
                  class="euiFormControlLayout"
                >
                  <div
                    class="euiFormControlLayout__childrenWrapper"
                  >
                    <div
                      class="euiComboBox__inputWrap euiComboBox__inputWrap--noWrap euiComboBox__inputWrap-isLoading"
                      data-test-subj="comboBoxInput"
                      tabindex="-1"
                    >
                      <p
                        class="euiComboBoxPlaceholder"
                      >
                        Find indices
                      </p>
                      <div
                        class="euiComboBox__input"
                        style="font-size: 14px; display: inline-block;"
                      >
                        <input
                          aria-controls=""
                          data-test-subj="comboBoxSearchInput"
                          id="random_html_id"
                          role="textbox"
                          style="box-sizing: content-box; width: 2px;"
                          value=""
                        />
                        <div
                          style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                        />
                      </div>
                    </div>
                    <div
                      class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                    >
                      <span
                        class="euiLoadingSpinner euiLoadingSpinner--medium"
                      />
                      <button
                        aria-label="Open list of options"
                        class="euiFormControlLayoutCustomIcon euiFormControlLayoutCustomIcon--clickable"
                        data-test-subj="comboBoxToggleListButton"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
                          focusable="false"
                          height="16"
                          role="img"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M13.069 5.157L8.384 9.768a.546.546 0 01-.768 0L2.93 5.158a.552.552 0 00-.771 0 .53.53 0 000 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 000-.76.552.552 0 00-.771 0z"
                            fill-rule="non-zero"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="euiFormHelpText euiFormRow__text"
                id="random_html_id-help"
              >
                You can use a wildcard (*) in your index pattern.
              </div>
            </div>
          </div>
          <div
            class="euiFormRow euiFormRow--fullWidth"
            hint="Choose a subset of your data source to focus your data stream and reduce noisy data."
            id="random_html_id-row"
          >
            <div
              class="euiFormRow__labelWrapper"
            >
              <label
                class="euiFormLabel euiFormRow__label"
                for="random_html_id"
              >
                <div
                  style="line-height: 8px;"
                >
                  <p>
                    Data filter
                    <span
                      class="optional"
                    >
                      - optional
                    </span>
                  </p>
                  <br />
                  <div
                    class="euiText euiText--medium sublabel"
                    style="max-width: 400px;"
                  >
                    Choose a subset of your data source to focus your data stream and reduce noisy data.
                  </div>
                </div>
              </label>
            </div>
            <div
              class="euiFormRow__fieldWrapper"
            >
              <div
                class="euiSpacer euiSpacer--m"
              />
              <div
                class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--directionRow euiFlexGroup--responsive"
              >
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <svg
                    aria-hidden="true"
                    class="euiIcon euiIcon--medium"
                    focusable="false"
                    height="16"
                    role="img"
                    style="margin-right: -4px; margin-top: 2px;"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7.999 15.999a8 8 0 110-16 8 8 0 010 16zM8 15A7 7 0 108 1a7 7 0 000 14zM3.5 5h9a.5.5 0 110 1h-9a.5.5 0 010-1zm2 3h5a.5.5 0 110 1h-5a.5.5 0 010-1zm2 3h1a.5.5 0 110 1h-1a.5.5 0 110-1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                  style="margin-top: 0px;"
                >
                  <button
                    class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall"
                    type="button"
                  >
                    <span
                      class="euiButtonContent euiButtonEmpty__content"
                    >
                      <span
                        class="euiButtonEmpty__text"
                      >
                        + Add data filter
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="euiSpacer euiSpacer--l"
    />
    <div
      class="euiPanel euiPanel--paddingMedium"
      style="padding: 20px;"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
        style="padding: 0px;"
      >
        <div
          class="euiFlexItem"
        >
          <h3
            class="euiTitle euiTitle--small"
          >
            Timestamp
          </h3>
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem content-panel-subTitle"
              style="line-height: normal; max-width: 75%;"
            >
              Select the time field you want to use for the time filter.
            </div>
          </div>
        </div>
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem"
            />
          </div>
        </div>
      </div>
      <div>
        <hr
          class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginSmall"
        />
        <div
          style="padding: 10px 0px;"
        >
          <div
            class="euiFormRow"
            hint="Choose the time field you want to use for time filter."
            id="random_html_id-row"
            title="Timestamp field"
          >
            <div
              class="euiFormRow__labelWrapper"
            >
              <label
                aria-invalid="false"
                class="euiFormLabel euiFormRow__label"
                for="random_html_id"
              >
                <div
                  style="line-height: 8px;"
                >
                  <p>
                    Timestamp field
                  </p>
                  <br />
                  <div
                    class="euiText euiText--medium sublabel"
                    style="max-width: 400px;"
                  >
                    Choose the time field you want to use for time filter.
                  </div>
                </div>
              </label>
            </div>
            <div
              class="euiFormRow__fieldWrapper"
            >
              <div
                aria-expanded="false"
                aria-haspopup="listbox"
                class="euiComboBox"
                role="combobox"
              >
                <div
                  class="euiFormControlLayout"
                >
                  <div
                    class="euiFormControlLayout__childrenWrapper"
                  >
                    <div
                      class="euiComboBox__inputWrap euiComboBox__inputWrap--noWrap"
                      data-test-subj="comboBoxInput"
                      tabindex="-1"
                    >
                      <p
                        class="euiComboBoxPlaceholder"
                      >
                        Find timestamp
                      </p>
                      <div
                        class="euiComboBox__input"
                        style="font-size: 14px; display: inline-block;"
                      >
                        <input
                          aria-controls=""
                          data-test-subj="comboBoxSearchInput"
                          id="random_html_id"
                          role="textbox"
                          style="box-sizing: content-box; width: 2px;"
                          value=""
                        />
                        <div
                          style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                        />
                      </div>
                    </div>
                    <div
                      class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                    >
                      <button
                        aria-label="Open list of options"
                        class="euiFormControlLayoutCustomIcon euiFormControlLayoutCustomIcon--clickable"
                        data-test-subj="comboBoxToggleListButton"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
                          focusable="false"
                          height="16"
                          role="img"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M13.069 5.157L8.384 9.768a.546.546 0 01-.768 0L2.93 5.158a.552.552 0 00-.771 0 .53.53 0 000 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 000-.76.552.552 0 00-.771 0z"
                            fill-rule="non-zero"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="euiSpacer euiSpacer--l"
    />
    <div
      class="euiPanel euiPanel--paddingMedium"
      style="padding: 20px;"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
        style="padding: 0px;"
      >
        <div
          class="euiFlexItem"
        >
          <h3
            class="euiTitle euiTitle--small"
          >
            Operation settings
          </h3>
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem content-panel-subTitle"
              style="line-height: normal; max-width: 75%;"
            />
          </div>
        </div>
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem"
            />
          </div>
        </div>
      </div>
      <div>
        <hr
          class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginSmall"
        />
        <div
          style="padding: 10px 0px;"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem"
              style="max-width: 70%;"
            >
              <div
                class="euiFormRow euiFormRow--fullWidth"
                hint="Define how often the detector collects data to generate anomalies. The shorter the interval is, the more real time the  detector results will be, and the more computing resources the  detector will need."
                hintlink="https://opensearch.org/docs/monitoring-plugins/ad"
                id="random_html_id-row"
                title="Detector interval"
              >
                <div
                  class="euiFormRow__labelWrapper"
                >
                  <label
                    aria-invalid="false"
                    class="euiFormLabel euiFormRow__label"
                    for="random_html_id"
                  >
                    <div
                      style="line-height: 8px;"
                    >
                      <p>
                        Detector interval
                      </p>
                      <br />
                      <div
                        class="euiText euiText--medium sublabel"
                        style="max-width: 400px;"
                      >
                        Define how often the detector collects data to generate anomalies. The shorter the interval is, the more real time the  detector results will be, and the more computing resources the  detector will need.
                         
                        <a
                          class="euiLink euiLink--primary"
                          href="https://opensearch.org/docs/monitoring-plugins/ad"
                          rel="noopener noreferrer"
                          target="_blank"
                        >
                          Learn more 
                          <svg
                            aria-hidden="true"
                            class="euiIcon euiIcon--small"
                            focusable="false"
                            height="16"
                            role="img"
                            viewBox="0 0 16 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M13 8.5a.5.5 0 111 0V12a2 2 0 01-2 2H4a2 2 0 01-2-2V4a2 2 0 012-2h3.5a.5.5 0 010 1H4a1 1 0 00-1 1v8a1 1 0 001 1h8a1 1 0 001-1V8.5zm-5.12.339a.5.5 0 11-.706-.707L13.305 2H10.5a.5.5 0 110-1H14a1 1 0 011 1v3.5a.5.5 0 11-1 0V2.72L7.88 8.838z"
                            />
                          </svg>
                        </a>
                      </div>
                    </div>
                  </label>
                </div>
                <div
                  class="euiFormRow__fieldWrapper"
                >
                  <div
                    class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
                    id="random_html_id"
                  >
                    <div
                      class="euiFlexItem euiFlexItem--flexGrowZero"
                    >
                      <div
                        class="euiFormControlLayout"
                      >
                        <div
                          class="euiFormControlLayout__childrenWrapper"
                        >
                          <input
                            class="euiFieldNumber"
                            data-test-subj="detectionInterval"
                            id="detectionInterval"
                            min="1"
                            name="interval"
                            placeholder="Detector interval"
                            type="number"
                            value="10"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="euiFlexItem"
                    >
                      <div
                        class="euiText euiText--medium"
                      >
                        <p
                          class="minutes"
                        >
                          minutes
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="euiFormRow euiFormRow--fullWidth"
            hint="Specify a window of delay for a detector to fetch data, if you need to account for extra processing time."
            hintlink="https://opensearch.org/docs/monitoring-plugins/ad"
            id="random_html_id-row"
            style="margin-top: 16px;"
            title="Window delay"
          >
            <div
              class="euiFormRow__labelWrapper"
            >
              <label
                aria-invalid="false"
                class="euiFormLabel euiFormRow__label"
                for="random_html_id"
              >
                <div
                  style="line-height: 8px;"
                >
                  <p>
                    Window delay
                  </p>
                  <br />
                  <div
                    class="euiText euiText--medium sublabel"
                    style="max-width: 400px;"
                  >
                    Specify a window of delay for a detector to fetch data, if you need to account for extra processing time.
                     
                    <a
                      class="euiLink euiLink--primary"
                      href="https://opensearch.org/docs/monitoring-plugins/ad"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      Learn more 
                      <svg
                        aria-hidden="true"
                        class="euiIcon euiIcon--small"
                        focusable="false"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M13 8.5a.5.5 0 111 0V12a2 2 0 01-2 2H4a2 2 0 01-2-2V4a2 2 0 012-2h3.5a.5.5 0 010 1H4a1 1 0 00-1 1v8a1 1 0 001 1h8a1 1 0 001-1V8.5zm-5.12.339a.5.5 0 11-.706-.707L13.305 2H10.5a.5.5 0 110-1H14a1 1 0 011 1v3.5a.5.5 0 11-1 0V2.72L7.88 8.838z"
                        />
                      </svg>
                    </a>
                  </div>
                </div>
              </label>
            </div>
            <div
              class="euiFormRow__fieldWrapper"
            >
              <div
                class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
                id="random_html_id"
              >
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <div
                    class="euiFormControlLayout"
                  >
                    <div
                      class="euiFormControlLayout__childrenWrapper"
                    >
                      <input
                        class="euiFieldNumber"
                        data-test-subj="windowDelay"
                        id="windowDelay"
                        name="windowDelay"
                        placeholder="Window delay"
                        type="number"
                        value="1"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="euiFlexItem"
                >
                  <div
                    class="euiText euiText--medium"
                  >
                    <p
                      class="minutes"
                    >
                      minutes
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="euiSpacer euiSpacer--l"
    />
    <div
      class="euiPanel euiPanel--paddingMedium"
      style="padding: 20px;"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
        style="padding: 0px;"
      >
        <div
          class="euiFlexItem"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem"
            >
              <h2
                class="euiTitle euiTitle--small"
                id="resultIndexField"
              >
                Custom result index
              </h2>
            </div>
          </div>
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem content-panel-subTitle"
              style="line-height: normal; max-width: 75%;"
            >
              <div
                class="euiText euiText--medium content-panel-subTitle"
                style="line-height: normal;"
              >
                Store detector results to your own index.
                 
                <a
                  class="euiLink euiLink--primary"
                  href="https://opensearch.org/docs/monitoring-plugins/ad"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Learn more 
                  <svg
                    aria-hidden="true"
                    class="euiIcon euiIcon--small"
                    focusable="false"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M13 8.5a.5.5 0 111 0V12a2 2 0 01-2 2H4a2 2 0 01-2-2V4a2 2 0 012-2h3.5a.5.5 0 010 1H4a1 1 0 00-1 1v8a1 1 0 001 1h8a1 1 0 001-1V8.5zm-5.12.339a.5.5 0 11-.706-.707L13.305 2H10.5a.5.5 0 110-1H14a1 1 0 011 1v3.5a.5.5 0 11-1 0V2.72L7.88 8.838z"
                    />
                  </svg>
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem"
            />
          </div>
        </div>
      </div>
      <div>
        <hr
          class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginSmall"
        />
        <div
          style="padding: 10px 0px;"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionColumn euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem"
            >
              <div
                class="euiCheckbox"
              >
                <input
                  class="euiCheckbox__input"
                  disabled=""
                  id="resultIndexCheckbox"
                  type="checkbox"
                />
                <div
                  class="euiCheckbox__square"
                />
                <label
                  class="euiCheckbox__label"
                  for="resultIndexCheckbox"
                >
                  Enable custom result index
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;
